--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,19 +2,36 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .page_border{
+    color : #ffffff;
+    position: relative;
     margin: 100px auto;
     min-width: 800px;
-    background-color: #071723;
-    box-shadow: 0px 0px 20px #000000;
-}
-
-.page_content{    
-    margin: 50px 50px;
-}  
-
-.list_container{
-    background-color : white;   
-    padding: 10px;
+    min-height: 600px;
     border-radius: 10px;
-    box-shadow: 0px 0px 15px #000000;
+    background-color: #00ABBF;
+    -webkit-box-shadow: 0px 6px 0px #007784;
+    -moz-box-shadow: 0px 6px 0px #007784;
+    box-shadow: 0px 6px 0px #007784;
+    padding: 24px 24px;
+    
+    th{
+        font-weight: bold;
+        font-size: 20px;        
+    }
+    td{
+        font-size: 18px;
+        a {
+            color:#ffffff;
+        }        
+    }
 }
+
+// .list_container{
+//     background-color : white;   
+//     padding: 10px;    
+//     height: 480px;
+//     border-radius: 10px;
+//     -webkit-box-shadow: 0px 6px 0px #BCBDAC;
+//     -moz-box-shadow: 0px 6px 0px #BCBDAC;
+//     box-shadow: 0px 6px 0px #BCBDAC;
+// }
