--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,24 +1,21 @@
 <div class="container page_border">    
-    <div class="page_content">
-        <div class="list_container">
-            <table class="table table-condensed">
-                <thead>
-                  <tr>
-                    <th class="col-xs-2">Number</th>                    
-                    <th class="col-xs-6">Title</th>                
-                    <th class="col-xs-4">Time</th>
-                  </tr>
-                </thead>
-                <tbody>
-                    <% @post_list.each do |post| %>                                                       
-                        <tr>                         
-                            <td class="col-xs-2"><%= post.id %></td>
-                            <td class="col-xs-6"><%= post.title %></td>                          
-                            <td class="col-xs-4"><%= mail.created_at.in_time_zone("Seoul").strftime("%Y.%m.%d %H:%M") %></td>                        
-                        </tr>
-                    <% end %>
-                </tbody>
-            </table>
-        </div>
-    </div>
+    <table class="table table-condensed">
+        <thead>
+          <tr>
+            <th class="col-xs-2">번호</th>                    
+            <th class="col-xs-6">제목</th>                
+            <th class="col-xs-4">작성 시간</th>
+          </tr>
+        </thead>
+        <tbody>
+            <% @post_list.each do |post| %>                                                       
+                <tr>                         
+                    <td class="col-xs-2"><%= post.id %></td>
+                    <td class="col-xs-6"><a href="#"><%= post.title %></a></td>                          
+                    <td class="col-xs-4"><%= post.created_at.in_time_zone("Seoul").strftime("%Y.%m.%d %H:%M") %></td>                        
+                </tr>
+            <% end %>
+        </tbody>
+    </table>
+    <a type="button" class="stumble-big">글쓰기</a>
 </div>
