--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -26,6 +26,16 @@
     }
 }
 
+//===== write_post =====//
+.page_border{
+    textarea{
+        height: 400px;
+        resize: none;
+    }
+}
+
+
+
 // .list_container{
 //     background-color : white;   
 //     padding: 10px;    
