--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,5 +17,5 @@
             <% end %>
         </tbody>
     </table>
-    <a type="button" class="stumble-big">글쓰기</a>
+    <a href="/home/write_post" type="button" class="stumble-big">글쓰기</a>
 </div>
