--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
             <% @post_list.each do |post| %>                                                       
                 <tr>                         
                     <td class="col-xs-2"><%= post.id %></td>
-                    <td class="col-xs-6"><a href="#"><%= post.title %></a></td>                          
+                    <td class="col-xs-6"><a href="/home/post/<%=post.id%>"><%= post.title %></a></td>                          
                     <td class="col-xs-4"><%= post.created_at.in_time_zone("Seoul").strftime("%Y.%m.%d %H:%M") %></td>                        
                 </tr>
             <% end %>
