--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,7 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .page_border{
-    color : #ffffff;
     position: relative;
     margin: 100px auto;
     min-width: 800px;
@@ -15,10 +14,12 @@
     padding: 24px 24px;
     
     th{
+        color : #ffffff;
         font-weight: bold;
         font-size: 20px;        
     }
     td{
+        color:#ffffff;
         font-size: 18px;
         a {
             color:#ffffff;
@@ -36,6 +37,29 @@
         color: #000000;
         min-height: 400px;
     }
+    .reply-container{
+        position:relative;
+        .reply-user{
+            font-size:18px;
+            float:left;
+            top:10px;
+            left:10px;
+        }
+        .reply-date{
+            font-size:14px;
+            float:right;
+            top:10px;
+            right:10px;
+            color: #6d6d6d;
+        }
+        .reply-content{
+            clear: both;
+            font-size: 16px;
+            padding-top: 10px;
+            padding-left: 10px;
+        }
+    }
+
     
 }
 // .list_container{
